# cuems-wsclient

./: .gitignore  README.md  osclistener.py  pyproject.toml  wsclient.py
debian/: changelog  control  cuems-power-bridge.install  cuems-power-bridge.postinst  cuems-power-bridge.service  rules
src/cuemswsclient/: __init__.py  bridge.py  config.py  editor_client.py  engine_state.py  network_map.py  node_executor.py  osc_parse.py  osclistener.py  reachability.py  shelly.py  wsclient.py
src/cuemswsclient/data/: power-bridge.conf.default
src/cuemswsclient/data/shelly-mjs/: cuems-shutdown.js
src/cuemswsclient/scripts/: __init__.py  deploy_keys.py  install_shelly_mjs.py  power_bridge.py
