[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cuemswsclient"
version = "0.2.0"
description = "CUEMS power bridge: Shelly + Companion shutdown coordinator and engine WebSocket client"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Ion Reguera <ion@stagelab.coop>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: System :: Power (UPS)",
]
repository = "https://github.com/stagesoft/cuems-wsclient"
homepage = "https://github.com/stagesoft/cuems-wsclient"

[[tool.poetry.packages]]
include = "cuemswsclient"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = ">=3.9"
websockets = ">=12.0"
python-osc = ">=1.8"
# cuemsutils provides XML schema + network_map parsing helpers; pulled
# in transitively from cuems-utils Debian package. Declared optional
# here so unit tests on dev box can mock it.
cuemsutils = {version = ">=0.1.0rc5", optional = true}
# systemd-python is provided by python3-systemd (see debian/control).

[tool.poetry.extras]
production = ["cuemsutils"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = "*"
pytest-mock = "*"

[tool.poetry.scripts]
cuems-power-bridge = "cuemswsclient.scripts.power_bridge:main"
cuems-power-bridge-deploy-keys = "cuemswsclient.scripts.deploy_keys:main"
cuems-power-bridge-install-mjs = "cuemswsclient.scripts.install_shelly_mjs:main"
cuems-wsclient = "cuemswsclient.wsclient:main_cli"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-v", "-ra", "--strict-markers"]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
